--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Poppins;
+    text-decoration: none;
 }
 
 .site {
@@ -12,13 +14,12 @@
 .conteudo {
     width: 1320px;
     margin: 0 auto;
-    border: dotted 2px #000;
 }
 
-/*** CABECALHO ***/
 .cabecalho {
     height: 120px;
-    background-image: linear-gradient(180deg, #FFFFFF 0%, #DBDBDB 100%);
+    background-color: transparent;
+    background-image: linear-gradient(180deg, #FFFFFF 0%, #BDBDBD 100%);
 }
 
 .cabecalho .conteudo {
@@ -28,13 +29,365 @@
     justify-content: space-between;
 }
 
-.cabecalho .conteudo .logo{
-    width: 165px;
+.cabecalho .conteudo .logo {
+    max-width: 165px;
 }
 
 .cabecalho .conteudo .menus ul {
     display: flex;
-    gap: 20px;
-
+    gap: 10px;
     list-style: none;
+}
+
+.menus a{
+    color: white;
+}
+
+.menu {
+    height: 60px;
+    background-image: linear-gradient(180deg, #FFFFFF 0%, #BDBDBD 100%);
+    display: flex;
+}
+
+.menu .conteudo {
+    display: flex;
+    align-items: center;
+}
+
+.menu ul {
+    flex-basis: 100%;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: #003C6A;
+    font-weight: bold;
+    font-size: large;
+    padding: 20px;
+}
+
+.menu ul li a:hover {
+    text-decoration: none;
+    background: #FFFFFF;
+    height: 100%;
+}
+
+.round-portalHabitante{
+    background-color: #7E7E7E;
+    border-radius: 50px;
+    color: white;
+    padding: 0 15px 0 15px;
+}
+
+.round-blog{
+    background-color: #0082C4;
+    border-radius: 50px;
+    color: white;
+    padding: 0 15px 0 15px;
+}
+
+.round-icon{
+    background-color: #7E7E7E;
+    text-decoration: none;
+    border-radius: 50px;
+    color: white;
+    padding: 5px;
+}
+
+.banner {
+    width: 100%;
+    overflow: hidden;
+}
+
+.noticias-competencias {
+    background-image: linear-gradient(180deg, #00315E 0%, #000825);
+}
+
+.noticias-competencias h2 {
+    color: #FFFFFF;
+    font-weight: 900;
+    margin-top: 80px;
+    font-size: 30px;
+}
+
+.conteudo-noticias {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-noticias {
+    flex-basis: 24%;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    overflow: hidden;
+    padding-bottom: 20px;
+}
+
+.card-noticias .card-noticias-imagem {
+    height: 220px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card-noticias .card-noticias-data {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #003c6ac3;
+    position: absolute;
+    top: 170px;
+    width: 100%;
+    color: #00aaff;
+    font-weight: 300;
+}
+
+
+.card-noticias .card-noticias-data p {
+    text-align: center;
+}
+
+.card-noticias .card-noticias-imagem img {
+    width: 100%;
+    transition: all 0.5s ease-out;
+}
+
+.card-noticias .card-noticias-imagem:hover img {
+    transform: scale(1.3);
+}
+
+.card-noticias-texto {
+    padding: 20px;
+    font-size: light;
+    font-weight: 600;
+    line-height: 22px;
+    color: #02477c
+}
+
+.card-noticias .leia-mais .btn {
+    background: #EBEBEB;
+    padding: 5px 10px;
+    border-radius: 15px;
+    margin: 10px;
+    text-decoration: none;
+    font-style: italic;
+    color: #0082c4;
+    float: right;
+}
+
+.card-noticias .leia-mais .btn:hover {
+    background: #0082c4;
+    padding: 5px 10px;
+    border-radius: 15px;
+    margin: 10px;
+    text-decoration: none;
+    font-style: italic;
+    color: #EBEBEB;
+}
+
+.competencias
+{
+    display: flex;
+    width: 100%;
+    height: 800px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.competencias .caixaimg
+{
+    flex-basis: 32%;
+    border: solid #4f4974 1px;
+    border-radius: 10px;
+    height: 400px;
+    background-color: #000825;
+    line-height: 22px;
+    overflow: hidden;
+    height: 230px;
+    position:relative;
+}
+
+.competencias .caixaimg img
+{
+    width: 100%;
+    transition: all 0.8s ease-out;
+}
+
+.competencias .caixaimg img:hover
+{
+    transform: scale(1.3);
+}
+
+.competencias .caixaimg .texto
+{
+    position: absolute;
+    top:calc(50% - 15px);
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    font-size: 17px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 90px 0px 0px 0px;
+}
+
+
+footer
+{
+    background-image: linear-gradient(to bottom, #000826, #00315E);
+    color: #ffffff;
+    padding: 40px 0;
+}
+
+footer img
+{
+    height: 110px;
+    width: 180px;
+}
+
+footer h5
+{
+    padding-top: 2rem;
+    text-align: center;
+    font-size: 12px;
+}
+
+.botoes
+{
+    list-style: none;
+    display: flex;
+    gap: 10px;   
+    flex-direction: row;
+}
+
+.footer-container
+{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.infomaior
+{
+    display: flex;
+    flex-direction: column;
+    width: 50vh;
+}
+
+.footer-info
+{
+    display: flex;
+    flex-direction: column;
+    width: 50vh;
+}
+
+.footer-info h4
+{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.footer-info p
+{
+    margin: 5px 0;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.footer-links a
+{
+    color: #ffffff;
+    font-size: 0.9rem;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: block;
+    transition: color 0.5s ease;
+}
+
+.footer-links a:hover
+{
+    color: #6f7ced;
+}
+
+.footer-links
+{
+    margin-top: 20px;
+    list-style: none;   
+    display: flex;
+    width: 50vh;
+    flex-direction: column;
+    text-align: right;
+}
+
+.footer-links a:not(:last-child)
+{
+    margin-bottom: 10px;
+}
+
+.botao-cadastro
+{
+    font-size: 12px;
+    height: 50px;
+    width: 50px;
+    padding-top: 20px;
+
+}
+
+.botao-cadastro button 
+{
+    color: aliceblue;
+    border: none;
+    background-color: #00509b;
+    height: 30px;
+    width: 300px;
+    padding: 0 15px 0 15px;
+    border-radius: 20px;
+}
+
+.botao-cadastro a 
+{
+    color: aliceblue;
+    font-size: 0.7rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: color 0.5s ease;
+}
+
+.botao-topo
+{
+    width: 27%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 20px;
+}
+.botao-topo button 
+{
+    width: 100px;
+    height: 40px;
+    font-size: 10px;
+    border-radius: 50px;
+    border: none;
+}
+
+.botao-topo a
+{
+    color: #000000;
+    font-size: 0.6rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: color 0.5s ease;
 }
